# FaceAlignment

./: .gitignore  CMakeLists.txt  LICENSE  README.md  boostTest  boostTest.cpp  index.html  input.txt  params.json
FaceAlignment/: .gitignore  CMakeLists.txt  Demo.cpp  FaceAlignment.h  Fern.cpp  FernCascade.cpp  OMP.cpp  ShapeRegressor.cpp  TestDemo.cpp  TrainDemo.cpp  Utils.cpp
demo/: demo.css  demo.fig  demo.html  demo.m  facepp.m  facepp_demo.m  mydemo.m  parse_json.m  test.m  urlreadpost.m  urlreadwrite.m
demo/image/: download
plan/: .gitignore  genPaper.sh  proposal.bib  proposal.tex
source_code/: .gitignore  CMakeLists.txt  Main.cpp  cofw_test.cpp  cofw_train.cpp  detect.m  face  face.h  face_crop.cpp  fern.cpp  fern_cascade.cpp  function.cpp  shape_regressor.cpp  test.cpp
src/: .gitignore  CMakeLists.txt  face.cpp  face.h  faceCrop  faceCrop.cpp  faceDetector.cpp  faceTest.cpp  faceTraining  faceTraining.cpp  facedetector  facepp_demo.m  feature.cpp  parameters.ini  shapeRegressor.h  trainingOutput.txt
src/trainingoutput/: featurePixelCoordinates.txt
